# stock-market-model

./: CLAUDE.md  README.md  main.py  pyproject.toml
trading_simulation/: __init__.py
trading_simulation/src/: order_book.py  simulation.py  traders.py  visualization.py
